--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ rvm:
   - 2.2.5
   - 2.3.1
 sudo: false
+before_install:
+  - gem install bundler
 script:
   - bundle exec rspec --color --format documentation
