--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,18 +8,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [ '2.4', '2.5', '2.6', '2.7', '3.0', '3.1', '3.2', '3.3' ]
+        ruby: [ '2.6', '2.7', '3.0', '3.1', '3.2', '3.3' ]
         gemfile: [ 'faraday_1.10.0', 'faraday_2.8.0', 'faraday_2.9.0', 'faraday_2.10.0', 'jwt_1.5.0', 'jwt_2.6.0', 'jwt_2.7.0', 'jwt_2.8.0', 'rack_2.1.0', 'rack_2.2.0', 'rack_3.0.0', 'rack_3.1.0' ]
         exclude:
-          - { ruby: '2.4', gemfile: 'faraday_2.8.0' }
-          - { ruby: '2.4', gemfile: 'faraday_2.9.0' }
-          - { ruby: '2.4', gemfile: 'faraday_2.10.0' }
-          - { ruby: '2.4', gemfile: 'jwt_2.6.0' }
-          - { ruby: '2.4', gemfile: 'jwt_2.7.0' }
-          - { ruby: '2.4', gemfile: 'jwt_2.8.0' }
-          - { ruby: '2.5', gemfile: 'faraday_2.8.0' }
-          - { ruby: '2.5', gemfile: 'faraday_2.9.0' }
-          - { ruby: '2.5', gemfile: 'faraday_2.10.0' }
           - { ruby: '3.0', gemfile: 'faraday_1.10.0' }
           - { ruby: '3.1', gemfile: 'faraday_1.10.0' }
           - { ruby: '3.2', gemfile: 'faraday_1.10.0' }
